src/objects/Apttus_Config2__AppliedExpressionInfo__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__ConfigurationId__c</fullName>
        <label>Product Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Applied Expression Infos</relationshipLabel>
        <relationshipName>AppliedExpressionInfos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldExpressionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Expression</label>
        <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
        <relationshipLabel>Applied Expression Infos</relationshipLabel>
        <relationshipName>AppliedExpressionInfos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceFields__c</fullName>
        <label>SourceFields</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SourceIds__c</fullName>
        <label>Source Ids</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TargetPrimaryLineNumber__c</fullName>
        <label>Target Primary Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UnresolvedPointers__c</fullName>
        <description>Criteria specifying whether addition of items requires evaluation of rules.</description>
        <label>Unresolved Pointers</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <label>Applied Expression Info</label>
    <nameField>
        <label>Applied Expression Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied Expression Infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>